[420] lightbulb should be transparent
[283] improve collision detection
[437] add "constant voltage source" feature
[423] change bar magnet colors to green and white
[442] make faraday into multiple sims
[443] add Earth image feature
[79] rotate coil or magnet
- convert model from Observer to Listener pattern

DONE:
3/27/08 - add message to DeveloperControlsPanel indicating these controls will not be reset by Reset All [248]
3/27/08 - absorb ScalePanel into DeveloperControlsPanel [248]
3/27/08 - create DeveloperControlsPanel for all developer controls that appear in ControlPanel [248]
3/27/08 - make VariableNumberOfSamplePointsStrategy the permanent strategy [248]
3/27/08 - add developer control for pickup coil B-field fudge factor to PickupCoilPanel [248]
3/27/08 - use pickup coil fudge factor to scale B-field for sample points inside magnet [248]
3/27/08 - simplify pickup coil emf calculation by using only B-field x component (Bx) [248]
3/27/08 - enable display of flux by default (developer control) [248]
3/27/08 - convert Developer menu items to a dialog so we can add other types of controls [248]
3/27/08 - simplify calculation of single-loop flux in PickupCoil.updateEmf [248]
********* version 1.05.04 (20411)
3/27/08 - reduce spacing between sample points on pickup coils [248]
3/27/08 - change CoilMagnet shape from circle to square to accommodate new pickup coil sample point strategy [248]
3/27/08 - remove redundant bounds member from DipoleMagnet, use modelShape to determine inside/outside [248]
3/26/08 - recalibrate PICKUP_REFERENCE_EMF and module scaling factors (LIGHTBULB_SCALE, VOLTMETER_SCALE, ELECTRON_SPEED_SCALE) [441]
3/26/08 - rename FaradayConstants.MAX_PICKUP_EMF to PICKUP_REFERENCE_EMF, add doc about how to set this [441]
3/26/08 - rename "voltage source" to "current source" throughout source code [437]
3/26/08 - set size of bar magnet model directly, scale graphic accordingly (instead of visa versa) [248]